# haskell.azalea

./: .gitignore  .gitmodules  README.md  azaela-haskell.cabal  build-rust.sh  build.sh  package.json  stack.yaml  tsconfig.json  vercel-build.sh  vercel.json
api/: index.ts
public/: ai-assistant-ui.js  ai-assistant.js  app.js  auto-launch.js  azalea-vm.js  device-detector.js  enhancements.js  firefox-vm.js  gasang-vm.js  index.html  linux-vm.js  styles.css  unified-os.js  vm-display.js  vm-manager.js
rust-vm/: .gitignore  Cargo.toml  README.md
rust-vm/src/: lib.rs  os_layer.rs  vm_core.rs
src/: Main.hs
src/VM/: AIAssistant.hs  Core.hs  Executor.hs  FileSystem.hs  IO.hs  Network.hs  OS.hs  Performance.hs  Scheduler.hs  Unified.hs  VM.hs  WebSocket.hs
