cabal-version:      3.0
name:               azaela-haskell
version:            1.0.0
synopsis:           Web-based Linux desktop environment on Vercel
description:        A full-featured web-based Linux desktop environment built with Haskell
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
build-type:         Simple

executable azaela-haskell
  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -O2
  build-depends:
    base >= 4.14 && < 5,
    wai >= 3.2.3,
    warp >= 3.3.23,
    aeson >= 2.0.3,
    text >= 2.0.2,
    bytestring >= 0.11.4,
    http-types >= 0.12.3,
    wai-cors >= 0.2.7,
    directory >= 1.3.7,
    process >= 1.6.16,
    filepath >= 1.4.2,
    array >= 0.5.4,
    containers >= 0.6.5,
    websockets >= 0.12.7,
    wai-websockets >= 3.0.1,
    network >= 3.1.2,
    stm >= 2.5.0,
    time >= 1.11.1,
    base64-bytestring >= 1.2.1,
    fingertree >= 0.1.4

