[package]
name = "gasang-vm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Gasang-inspired implementation
# We use gasang's source as reference but implement WASM-compatible version
# This allows us to leverage gasang's powerful architecture while working in browsers

# WebAssembly bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Performance",
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Additional dependencies for OS-like features
parking_lot = "0.12"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols

